Bug 388511 - "Do you want to allow [presentation mode]?" is inaccurate and misleading.
Summary: "Do you want to allow [presentation mode]?" is inaccurate and misleading.
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.26.1
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-04 05:06 UTC by jbn
Modified: 2018-04-06 11:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jbn 2018-01-04 05:06:18 UTC
When opening a PDF that indicates it should be opened in presentation mode, I am asked "The document requested to be launched in presentation mode. Do you want to allow it?". The button choices read "Do Not Allow" and "Allow".

I think this is a poorly worded question and I think the question and button text should be changed to reflect what is really being asked.

I'm not really being asked to *allow* presentation mode. If I select "Do Not Allow", I can still choose to enter presentation mode later. I'm being asked if I want to immediately switch into presentation mode. Thus the question Okular presents is inaccurate and misleading.

I think the question text should read: The document requested to be shown to you in presentation mode. Do you want to switch to presentation mode now?" With the button text for no saying "No" or "No, stay in this mode". The button for yes should read "Yes" or "Yes, enter presentation mode now".
Comment 1 Nate Graham 2018-01-06 05:14:51 UTC
Submitted a patch that changes the wording a bit: https://phabricator.kde.org/D9692
Comment 2 Nate Graham 2018-01-07 18:49:46 UTC
Git commit e44d50558323f319e2ebe8822c1c4545eaa7e53a by Nathaniel Graham.
Committed on 07/01/2018 at 18:49.
Pushed by ngraham into branch 'master'.

Improve dialog when PDF wants to open in presentation mode

Summary:

- Describe what's actually going to happen if you answer in the affirmative
- Use expressive button text with standard ok/cancel style icons
- Remove tooltips, since they're not needed when the buttons clearly indicate what will happen when you press them

Test Plan:
New dialog:
{F5626016}

Both buttons still work to do what they say they'll do.

Reviewers: #okular, aacid, rkflx

Reviewed By: rkflx

Subscribers: rkflx

Tags: #okular

Differential Revision: https://phabricator.kde.org/D9692

M  +5    -5    part.cpp

https://commits.kde.org/okular/e44d50558323f319e2ebe8822c1c4545eaa7e53a